--- a/public/css/RYPP.css
+++ b/public/css/RYPP.css
@@ -102,6 +102,14 @@
           content: counter(item);
           font-size: 80%; }
 
+.RYPP .RYPP-playlist ::-webkit-scrollbar-thumb {
+  border-left-color: #8e8e8e;
+  background: #8e8e8e; }
+.RYPP .RYPP-playlist ::-webkit-scrollbar-track {
+  border-left-color: #434343;
+  background: #434343;
+  -webkit-box-shadow: inset 0 0 1px #434343; }
+
 @media only screen and (max-width: 639px) {
   .RYPP #RYPP-video {
     width: 100%; }
