--- a/public/css/source/RYPP.css.scss
+++ b/public/css/source/RYPP.css.scss
@@ -153,6 +153,20 @@ $font_base: Arial, Helvetica, sans-serif;
   }
 }
 
+// Chrome scrollbar
+.RYPP {
+  .RYPP-playlist ::-webkit-scrollbar-thumb {
+    border-left-color: #8e8e8e;
+    background: #8e8e8e;
+  }
+  .RYPP-playlist ::-webkit-scrollbar-track {
+    border-left-color: #434343;
+    background: #434343;
+    -webkit-box-shadow: inset 0 0 1px #434343;
+  }
+}
+
+
 // Responsive sample
 @media only screen and (max-width: 639px) {
   .RYPP {
