--- a/public/css/RYPP.css
+++ b/public/css/RYPP.css
@@ -102,14 +102,14 @@
           content: counter(item);
           font-size: 80%; }
 
-.RYPP .RYPP-playlist ::-webkit-scrollbar-thumb {
-  border-left-color: #8e8e8e;
-  background: #8e8e8e; }
-.RYPP .RYPP-playlist ::-webkit-scrollbar-track {
-  border-left-color: #434343;
-  background: #434343;
-  -webkit-box-shadow: inset 0 0 1px #434343; }
-
+/* .RYPP-playlist::-webkit-scrollbar {
+  width: 20px;
+  background: yellow;
+}
+.RYPP-playlist::-webkit-scrollbar-thumb {
+  border: 2px dotted green;
+  border-radius: 10px;
+} */
 @media only screen and (max-width: 639px) {
   .RYPP #RYPP-video {
     width: 100%; }
