--- a/public/css/source/RYPP.css.scss
+++ b/public/css/source/RYPP.css.scss
@@ -154,18 +154,14 @@ $font_base: Arial, Helvetica, sans-serif;
 }
 
 // Chrome scrollbar
-.RYPP {
-  .RYPP-playlist ::-webkit-scrollbar-thumb {
-    border-left-color: #8e8e8e;
-    background: #8e8e8e;
-  }
-  .RYPP-playlist ::-webkit-scrollbar-track {
-    border-left-color: #434343;
-    background: #434343;
-    -webkit-box-shadow: inset 0 0 1px #434343;
-  }
+/* .RYPP-playlist::-webkit-scrollbar {
+  width: 20px;
+  background: yellow;
 }
-
+.RYPP-playlist::-webkit-scrollbar-thumb {
+  border: 2px dotted green;
+  border-radius: 10px;
+} */
 
 // Responsive sample
 @media only screen and (max-width: 639px) {
