--- a/css/RYPP.css
+++ b/css/RYPP.css
@@ -1,18 +1,17 @@
 .RYPP {
   /* Youtube Player With Playlist */
   width: 100%;
-  overflow: hidden;
+  position: relative;
+  padding-right: 250px;
   background: #1a1a1a;
+  overflow: hidden;
   font: 400 14px/120% Arial, Helvetica, sans-serif;
   color: #999; }
   .RYPP #RYPP-video {
-    width: 61.5%;
+    width: 100%;
+    padding-top: 56.25%;
     float: left;
     position: relative; }
-    .RYPP #RYPP-video > .RYPP-placeholder {
-      display: block;
-      width: 100%;
-      height: auto; }
     .RYPP #RYPP-video > iframe {
       position: absolute;
       left: 0;
@@ -20,6 +19,12 @@
       width: 100%;
       height: 100%;
       z-index: 2; }
+  .RYPP.r16-9 #RYPP-video {
+    padding-top: 56.25%; }
+  .RYPP.r4-3 #RYPP-video {
+    padding-top: 75%; }
+  .RYPP.r2-1 #RYPP-video {
+    padding-top: 50%; }
   .RYPP .RYPP-items {
     position: absolute;
     left: 0;
@@ -28,10 +33,11 @@
     bottom: 0;
     overflow-y: auto; }
   .RYPP .RYPP-playlist {
-    width: 38.5%;
-    float: left;
-    position: relative;
-    overflow: hidden;
+    width: 250px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
     background: #222; }
     .RYPP .RYPP-playlist a {
       color: #999; }
@@ -95,23 +101,25 @@
             border: 2px solid #c03636; }
           .RYPP .RYPP-playlist ol li.selected:before {
             content: '▶';
-            font-size: 7px;
+            font-size: 10px;
             color: #c03636; }
         .RYPP .RYPP-playlist ol li:before {
           counter-increment: item;
           content: counter(item);
           font-size: 80%; }
 
-/* .RYPP-playlist::-webkit-scrollbar {
-  width: 20px;
-  background: yellow;
-}
-.RYPP-playlist::-webkit-scrollbar-thumb {
-  border: 2px dotted green;
-  border-radius: 10px;
-} */
+.RYPP-items::-webkit-scrollbar {
+  width: 6px;
+  background: #3a3a3a; }
+
+.RYPP-items::-webkit-scrollbar-thumb {
+  background: #999; }
+
 @media only screen and (max-width: 639px) {
-  .RYPP #RYPP-video {
-    width: 100%; }
-  .RYPP .RYPP-playlist {
-    width: 100%; } }
+  .RYPP {
+    position: static;
+    padding-right: 0; }
+    .RYPP .RYPP-playlist {
+      width: 100%;
+      position: static;
+      height: 450px; } }
